--- a/src/renderer/src/assets/styles/index.scss
+++ b/src/renderer/src/assets/styles/index.scss
@@ -39,6 +39,11 @@ body,
   flex: 1;
 }
 
+/* Any custom full-screen top view should not be draggable */
+.topview-fullscreen-container {
+  -webkit-app-region: no-drag;
+}
+
 body {
   display: flex;
   min-height: 100vh;
